syntax = "proto3";
option go_package = "Open_IM/pkg/proto/admin_cms;admin_cms";
import "Open-IM-Server/pkg/proto/sdk_ws/ws.proto";
package admin_cms;

message AdminLoginReq  {
    string adminID = 2;
    string secret = 3;
}

message AdminLoginResp {
    string token = 1;
    string userName = 2;
    string faceURL = 3;
}

message GetChatLogsReq {
    string content = 1;
    string sendID = 2;
    string recvID = 3;
    string sendTime = 4;
    int32 sessionType = 5;
    int32 contentType = 6;
    server_api_params.RequestPagination pagination = 7;
}

message ChatLog {
    string serverMsgID = 1;
	string clientMsgID = 2;
	string sendID = 3;
	string recvID = 4;  
    string groupID = 5;    
    string recvNickname = 6; 
	int32 senderPlatformID = 7;
	string senderNickname = 8;
	string senderFaceURL = 9;  
    string groupName = 10;
	int32 sessionType = 11;           
	int32 msgFrom = 12;      
	int32 contentType = 13;          
	string content = 14;             
	int32 status = 15;    
	int64 sendTime = 16;     
	int64 createTime = 17;  
	string ex = 18;    
}

message GetChatLogsResp {
    repeated ChatLog chatLogs = 1;
    int32 chatLogsNum = 2;
}


message StatisticsReq {
    string from = 1;
    string to = 2;
}

message GetActiveUserReq{
    StatisticsReq statisticsReq = 1;
}

message UserResp{
    string nickName = 1;
    string userID = 2;
    int32 messageNum = 3;
}

message GetActiveUserResp {
    repeated UserResp Users = 1;
}

message GetActiveGroupReq{
    StatisticsReq statisticsReq = 1;
}

message GroupResp {
    string GroupName = 1;
    string GroupID = 2;
    int32 MessageNum = 3;
}

message GetActiveGroupResp {
    repeated GroupResp Groups = 1;
}

message DateNumList {
    string Date = 1;
    int32 Num = 2;
}


message GetMessageStatisticsReq {
    StatisticsReq StatisticsReq = 1;
    string OperationID = 2;
}


message GetMessageStatisticsResp {
    int32 PrivateMessageNum = 1;
    int32 GroupMessageNum = 2;
    repeated DateNumList PrivateMessageNumList = 3;
    repeated DateNumList GroupMessageNumList = 4;
    CommonResp commonResp = 5;
}

message GetGroupStatisticsReq {
    StatisticsReq StatisticsReq = 1;
    string OperationID = 2;
}


message GetGroupStatisticsResp {
    int32 IncreaseGroupNum = 1;
    int32 TotalGroupNum = 2;
    repeated DateNumList IncreaseGroupNumList = 3;
    repeated DateNumList TotalGroupNumList = 4;
    CommonResp commonResp = 5;
}

message GetUserStatisticsReq {
    StatisticsReq StatisticsReq = 1;
    string OperationID = 2;
}

message GetUserStatisticsResp {
    int32 IncreaseUserNum = 1;
    int32 ActiveUserNum = 2;
    int32 TotalUserNum = 3;
    repeated DateNumList IncreaseUserNumList = 4;
    repeated DateNumList ActiveUserNumList = 5;
    repeated DateNumList TotalUserNumList = 6;
}


message GetUserFriendsReq {
    string operationID = 1;
    string userID = 2;
    string friendUserID = 3;
    string friendUserName = 4;
    server_api_params.RequestPagination pagination = 5;
}

message GetUserFriendsResp {
    repeated server_api_params.FriendInfo friendInfoList = 2;
    int32 friendNums = 3;
}

message GetUserIDByEmailAndPhoneNumberReq{
  string email = 2;
  string phoneNumber = 3;
}

message GetUserIDByEmailAndPhoneNumberResp{
  repeated string userIDList = 1;
}

message GetUserTokenReq {
  string userID = 1;
  int32 platformID = 2;
}

message GetUserTokenResp {
  string token = 1;
  int64 expTime = 2;
}

service adminCMS {
    rpc AdminLogin(AdminLoginReq) returns(AdminLoginResp);
    rpc GetChatLogs(GetChatLogsReq) returns(GetChatLogsResp);
    rpc GetActiveUser(GetActiveUserReq) returns(GetActiveUserResp);
    rpc GetActiveGroup(GetActiveGroupReq) returns(GetActiveGroupResp);
    rpc GetMessageStatistics(GetMessageStatisticsReq) returns(GetMessageStatisticsResp);
    rpc GetGroupStatistics(GetGroupStatisticsReq) returns(GetGroupStatisticsResp);
    rpc GetUserStatistics(GetUserStatisticsReq) returns(GetUserStatisticsResp);
    rpc GetUserFriends(GetUserFriendsReq) returns(GetUserFriendsResp);
    rpc GetUserIDByEmailAndPhoneNumber(GetUserIDByEmailAndPhoneNumberReq) returns(GetUserIDByEmailAndPhoneNumberResp);
    rpc GetUserToken(GetUserTokenReq) returns(GetUserTokenResp);
}
