syntax = "proto3";
import "Open-IM-Server/pkg/proto/sdk_ws/ws.proto";
import "Open-IM-Server/pkg/proto/sdk_ws/wrappers.proto";
option go_package = "Open_IM/pkg/proto/group;group";
package group;


message GroupAddMemberInfo{
  string userID = 1;
  int32 roleLevel = 2;
}

message CreateGroupReq{
  repeated GroupAddMemberInfo initMemberList = 1;
  server_api_params.GroupInfo groupInfo = 2;
  string ownerUserID = 5; //owner


}
message CreateGroupResp{
  server_api_params.GroupInfo groupInfo = 3;
}


message GetGroupsInfoReq{
  repeated string groupIDList = 1;
}
message GetGroupsInfoResp{
  repeated server_api_params.GroupInfo groupInfoList = 3;
}


message SetGroupInfoReq{
  server_api_params.GroupInfoForSet groupInfoForSet = 1;
}
message SetGroupInfoResp{
}


message GetGroupApplicationListReq {
  string fromUserID = 3; //owner or manager
}
message GetGroupApplicationListResp {
  repeated server_api_params.GroupRequest groupRequestList = 3;
}

message GetUserReqApplicationListReq{
  string userID = 1;
}

message GetUserReqApplicationListResp{
  repeated server_api_params.GroupRequest groupRequestList = 2;
}


message TransferGroupOwnerReq {
  string groupID = 1;
  string oldOwnerUserID = 2;
  string newOwnerUserID = 3;
}
message TransferGroupOwnerResp{

}

message JoinGroupReq{
  string groupID = 1;
  string reqMessage = 2;
  int32 joinSource = 5;
  string inviterUserID = 6;

}
message JoinGroupResp{
}


message GroupApplicationResponseReq{
  string groupID = 3;
  string fromUserID = 4;  //
  string handledMsg = 5;
  int32 handleResult = 6;
}
message GroupApplicationResponseResp{

}



message QuitGroupReq{
  string groupID = 1;
}
message QuitGroupResp{
}



message GetGroupMemberListReq {
  string groupID = 1;
  int32 filter = 4;
  int32 nextSeq = 5;
}

message GetGroupMemberListResp {
  repeated server_api_params.GroupMemberFullInfo memberList = 3;
  int32 nextSeq = 4;
}


message GetGroupMembersInfoReq {
  string groupID = 1;
  repeated string memberList = 2;
}

message GetGroupMembersInfoResp {
  repeated server_api_params.GroupMemberFullInfo memberList = 3;
}

message KickGroupMemberReq {
  string groupID = 1;
  repeated string kickedUserIDList = 2;
  string reason = 3;
}

message Id2Result {
  string userID = 1;
  int32 result = 2; //0 ok; -1 error
}

message KickGroupMemberResp {
  repeated Id2Result id2ResultList = 3;
}


message GetJoinedGroupListReq {
  string fromUserID = 1;
}
message GetJoinedGroupListResp{
  repeated  server_api_params.GroupInfo groupList = 3;
}


message InviteUserToGroupReq {
  string groupID = 3;
  string reason = 4;
  repeated string invitedUserIDList = 5;
}
message InviteUserToGroupResp {
  repeated  Id2Result id2ResultList = 3; // 0 ok, -1 error
}


message GetGroupAllMemberReq {
  string groupID = 1;
  int32 offset = 4;
  int32 count = 5;
}
message GetGroupAllMemberResp {
  repeated server_api_params.GroupMemberFullInfo memberList = 3;
}

message CMSGroup {
    server_api_params.GroupInfo groupInfo = 1;
    string groupOwnerUserName = 2;
    string groupOwnerUserID = 3;
}


message GetGroupsReq {
    server_api_params.RequestPagination pagination = 1;
    string groupName = 2;
    string groupID = 3;
}

message GetGroupsResp {
    repeated CMSGroup groups = 1;
    server_api_params.ResponsePagination pagination = 2;
    int32 GroupNum = 3;
}

message GetGroupMemberReq {
    string groupID = 1;
}

message GetGroupMembersCMSReq {
   string groupID = 1;
   string userName = 2;
   server_api_params.RequestPagination pagination = 3;
}

message GetGroupMembersCMSResp {
   repeated server_api_params.GroupMemberFullInfo members = 1;
   server_api_params.ResponsePagination pagination = 2;
   int32 memberNums = 3;
}

message DismissGroupReq{
  string groupID = 3;
}

message DismissGroupResp{
}


message MuteGroupMemberReq{
  string groupID = 3;
  string userID = 4;
  uint32 mutedSeconds = 5;
}

message MuteGroupMemberResp{
}



message CancelMuteGroupMemberReq{
  string groupID = 3;
  string userID = 4;
}

message CancelMuteGroupMemberResp{
}


message MuteGroupReq{
  string groupID = 3;
}

message MuteGroupResp{
}



message CancelMuteGroupReq{
  string groupID = 3;
}

message CancelMuteGroupResp{
}




message SetGroupMemberNicknameReq{
  string groupID = 1;
  string nickname = 2;
  string userID = 5;
}
message SetGroupMemberNicknameResp{
}

message GetJoinedSuperGroupListReq {
  string userID = 2;
}

message GetJoinedSuperGroupListResp {
  repeated server_api_params.GroupInfo groupList = 3;
}

message GetSuperGroupsInfoReq {
  repeated string groupIDList = 1;

}

message GetSuperGroupsInfoResp {
  repeated server_api_params.GroupInfo groupInfoList = 3;
}

message SetGroupMemberInfoReq{
  string groupID = 1;
  string userID = 2;
  google.protobuf.StringValue nickname = 5;
  google.protobuf.StringValue faceURL = 6;
  google.protobuf.Int32Value roleLevel = 7;
  google.protobuf.StringValue ex = 8;
}

message SetGroupMemberInfoResp{

}

message GetGroupAbstractInfoReq{
  string groupID = 1;

}

message GetGroupAbstractInfoResp{
  int32 groupMemberNumber = 2;
  uint64 groupMemberListHash = 3;
}


service group{
  rpc createGroup(CreateGroupReq) returns(CreateGroupResp);
  rpc joinGroup(JoinGroupReq) returns(JoinGroupResp);
  rpc quitGroup(QuitGroupReq) returns(QuitGroupResp);
  rpc getGroupsInfo(GetGroupsInfoReq) returns(GetGroupsInfoResp);
  rpc setGroupInfo(SetGroupInfoReq) returns(SetGroupInfoResp);
  rpc getGroupApplicationList(GetGroupApplicationListReq) returns(GetGroupApplicationListResp);
  rpc getUserReqApplicationList(GetUserReqApplicationListReq) returns(GetUserReqApplicationListResp);
  rpc transferGroupOwner(TransferGroupOwnerReq) returns(TransferGroupOwnerResp);
  rpc groupApplicationResponse(GroupApplicationResponseReq) returns(GroupApplicationResponseResp);
  rpc getGroupMemberList(GetGroupMemberListReq) returns(GetGroupMemberListResp);
  rpc getGroupMembersInfo(GetGroupMembersInfoReq) returns(GetGroupMembersInfoResp);
  rpc kickGroupMember(KickGroupMemberReq) returns (KickGroupMemberResp);
  rpc getJoinedGroupList(GetJoinedGroupListReq) returns (GetJoinedGroupListResp);
  rpc inviteUserToGroup(InviteUserToGroupReq) returns (InviteUserToGroupResp);
  rpc getGroupAllMember(GetGroupAllMemberReq) returns(GetGroupAllMemberResp);

  rpc GetGroups(GetGroupsReq) returns(GetGroupsResp);
  rpc GetGroupMembersCMS(GetGroupMembersCMSReq) returns(GetGroupMembersCMSResp);


  rpc DismissGroup(DismissGroupReq) returns(DismissGroupResp);
  rpc MuteGroupMember(MuteGroupMemberReq) returns(MuteGroupMemberResp);
  rpc CancelMuteGroupMember(CancelMuteGroupMemberReq) returns(CancelMuteGroupMemberResp);
  rpc MuteGroup(MuteGroupReq) returns(MuteGroupResp);
  rpc CancelMuteGroup(CancelMuteGroupReq) returns(CancelMuteGroupResp);

  rpc SetGroupMemberNickname(SetGroupMemberNicknameReq) returns (SetGroupMemberNicknameResp);
  rpc GetJoinedSuperGroupList(GetJoinedSuperGroupListReq) returns (GetJoinedSuperGroupListResp);
  rpc GetSuperGroupsInfo(GetSuperGroupsInfoReq) returns (GetSuperGroupsInfoResp);
  rpc SetGroupMemberInfo(SetGroupMemberInfoReq) returns (SetGroupMemberInfoResp);
  rpc GetGroupAbstractInfo(GetGroupAbstractInfoReq) returns (GetGroupAbstractInfoResp);
}







